# PdfMerge

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
dependencies/windows/lib/: pdfio1.lib
